# CDearImGui

./: .gitignore  CMakeLists.txt  imgui.ini
.github/workflows/: CMake.yml
CDearImGui/: CDearImGui.cpp  CDearImGui.sln  CDearImGui.vcxproj  CDearImGui.vcxproj.filters  CImGui.h  imgui.ini  vcpkg.json
CDearImGui/x64/Debug/: CDearImGui.exe.recipe  CDearImGui.res  CDearImGui.vcxproj.FileListAbsolute.txt  vc143.idb
CDearImGui/x64/Debug/CDearImGui.tlog/: CDearImGui.lastbuildstate  CDearImGui.write.1u.tlog  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  VcpkgInstallManifestx64-windows.read.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog
include/: CImGui.h  CJon.h  ColorVectors.h  ImGuiThemes.h  OpenGLProcess.h  ProcessManager.h  ServerBridge.h  ServerList.h  StorageManager.h  Timer.h
src/: CDearImGui.cpp
